add image2 to index.html file

--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
     <link rel="stylesheet" href="/styles2/styles2.css">
 </head>
 <img src="/images/image1.jpg" alt="Flowers">
+<img src="/images/image2.jpg" alt="Flowers">
 </html>
