--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles2/styles2.css">
 </head>
 <img src="/images/image1.jpg" alt="Flowers">
 </html>
